--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,10 @@
             <plugin>
                 <groupId>org.easyb</groupId>
                 <artifactId>maven-easyb-plugin</artifactId>
-                <version>1.4</version>
+                <!-- Changed version from 1.4 to 1.5 to be internally
+                consistent with <easyb.version> stated above. -->
+                <!-- <version>1.4</version> -->
+                <version>1.5</version>
                 <executions>
                     <execution>
                         <goals>
