--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
         <easyb.version>1.4</easyb.version>
         <cobertura.version>2.5.1</cobertura.version>
         <!-- A workaround for a bug in PMD -->
-        <targetJdk>1.6</targetJdk>
+        <!-- Changed 1.6 to 1.7 -->
+        <targetJdk>1.7</targetJdk>
         <github.account>wakaleo</github.account>
         <thucydides.version>0.9.107</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
